test/spec_vectors/simd_bitwise/fail/module_18.wat
(module (func $v128.not-arg-empty (result v128) (v128.not)))